...
    tools:context=".SearchResult">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="10dp"
        android:id="@+id/listView"
        >

    </ListView>

</LinearLayout>

...
